fix nowrap on just issue nav links

--- a/wp-content/themes/understrap-child-master/sass/theme/_child_theme.scss
+++ b/wp-content/themes/understrap-child-master/sass/theme/_child_theme.scss
@@ -369,6 +369,10 @@ span.category-label {
   padding-left: 5px;
 }
 
+.issue-nav {
+  white-space: nowrap;
+}
+
 .caption {
     font-family: $card-meta-font-family;
     color: $orange;
